fix: Table overflow

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -198,6 +198,10 @@ summary {
   content: none;
 }
 
+.markdown .table {
+  overflow-x: auto;
+}
+
 .markdown table {
   width: 100%;
   table-layout: auto;
@@ -207,6 +211,29 @@ summary {
   font-size: 0.875em;
   line-height: 1.7142857;
   border-collapse: collapse;
+}
+
+.markdown .table::-webkit-scrollbar,
+.markdown .table::-webkit-scrollbar-track {
+  background-color: inherit;
+  border-radius: calc(0.3rem + 1.5px);
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.markdown .table::-webkit-scrollbar,
+.markdown .table::-webkit-scrollbar-track {
+  background-color: inherit;
+  border-radius: calc(0.3rem + 1.5px);
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.markdown .table::-webkit-scrollbar-thumb {
+  background-color: var(--contrast-color);
+  border: 4px solid transparent;
+  background-clip: content-box;
+  border-radius: 10px;
 }
 
 .markdown thead {
